<resources>
    <string name="app_name">Learn About the World</string>
    <string name="action_settings">Settings</string>
    <string name="title">Countries All Over the World</string>
    <string name="appDescription">There are 195 Countries in the World! Search different countries from different
    continents. You can take and save notes if you wish to. Test you knowledge of countries' flags (Note: you can filter the quiz by regions). </string>
    <string name="number_of_choices">Number of Choices</string>
    <string name="number_of_choices_description">Display 2, 4, 6 or 8 guess buttons</string>
    <string name="world_regions">Regions</string>
    <string name="world_regions_description">Regions to include in the quiz</string>
    <string name="guess_country">Guess the Country</string>
    <string name="results">You have Guessed %1$d times.
        You scored: %2$.02f%% </string>
    <string name="incorrect_answer">Incorrect!</string>
    <string name="default_region_message">
        One region must be selected. Setting Europe as the default region.
    </string>
    <string name="restarting_quiz">Quiz will restart with your new settings when you hit the Back Button</string>
    <string name="question">Question %1$d of %2$d</string>
    <string name="reset_quiz">Reset Quiz</string>
    <string name="image_description">Image of the current flag in the quiz</string>
    <string name="default_region">Europe</string>
    <string name="title_activity_settings">Settings</string>
    <string name="see_details">Go Back to Home Page</string>
    <string name="instructions">Search Country:</string>
    <string name="input_hint">Enter Country Name</string>
    <string name="button_text">Search Country</string>
    <string name="no_search_term">Please enter a search term</string>
    <string name="no_network">Please check your network connection and try again.</string>
    <string name="regionLabel">Region:</string>
    <string name="learnMore">Learn More</string>
    <string name="map_me">Map Me</string>
    <string name="save_country">Save Country</string>
    <string name="mapWelcome">It is Here!</string>
    <string name="title_activity_maps">Map</string>
    <string name="alreadyExists">"You've already saved this country"</string>
</resources>

