<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:layout_margin="5dp"
    android:orientation="horizontal"
    card_view:cardBackgroundColor="@color/Indigo"
    card_view:cardCornerRadius="5dp"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/card_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/questionPosition"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/chk_selected"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="Question"
                android:textColor="@color/white"
                android:textSize="16dp" />


        </LinearLayout>

        <!--this is used for expanding card view row-->
        <LinearLayout
            android:id="@+id/hidden_layout"
            android:layout_below="@+id/card_row"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/expanded_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/LightGrey"
                android:visibility="invisible"/>

                <TextView
                    android:id="@+id/nName_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/LightGrey"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_toLeftOf="@id/viewNativeName"
                    android:text="Native Name:"
                    android:visibility="invisible"/>

                <TextView
                    android:id="@+id/viewNativeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/LightGrey"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_toRightOf="@id/nName_label"
                    android:visibility="invisible"/>

                <TextView
                    android:id="@+id/region_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/LightGrey"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:layout_toLeftOf="@id/viewRegion"
                    android:text="Region:"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/viewRegion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/LightGrey"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:layout_toRightOf="@id/region_label"
                    android:visibility="gone"/>


                <TextView
                    android:id="@+id/currency_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/LightGrey"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_toLeftOf="@id/viewCurrency"
                    android:text="Currency Name:"
                    android:visibility="invisible"/>

                <TextView
                    android:id="@+id/viewCurrency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/LightGrey"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_toRightOf="@id/currency_label"
                    android:visibility="invisible"/>

            <Button
                android:id="@+id/btn_learnMore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:textColor="@color/white"
                android:text="@string/learnMore"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btn_Map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:textColor="@color/white"
                android:text="@string/map_me"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btn_saveCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:textColor="@color/white"
                android:text="@string/save_country"
                android:visibility="gone"/>
        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>